updated bogs get route and handlebar view for all blogs

--- a/views/blogs.handlebars
+++ b/views/blogs.handlebars
@@ -1,3 +1,11 @@
 <section>
-    <h1>Blogs section</h1>
+    {{#each blogs as |blog|}}
+    <div class="blog">
+        <p>{{blog.body}}</p>
+        <p>{{user.name}}</p>
+        {{#each comments as |comment|}}
+        <p>{{comment.body}}</p>
+        {{/each}}
+    </div>
+    {{/each}}
 </section>
